# by-framework-python

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README_zh.md  pyproject.toml
.github/workflows/: publish.yml
docs/: by-framework-trace-change-usage.html  by-framework-trace-complete-guide.html
docs/plans/: 2026-05-15-worker-task-state-stats.md  2026-06-10-trace-metrics-correlation.md  refactor-p0-summary.md
libs/by-framework-adk/: pyproject.toml
libs/by-framework-adk/src/by_framework_adk/: worker.py
libs/by-framework-dashboard/: Dockerfile  README.md  pyproject.toml
libs/by-framework-dashboard/frontend/: index.html  package-lock.json  vite.config.js
libs/by-framework-dashboard/frontend/src/: main.jsx  styles.css
libs/by-framework-dashboard/src/by_framework_dashboard/: __init__.py  adapters.py  dashboard.py
libs/by-framework-dashboard/src/by_framework_dashboard/static/: __init__.py  app.js  styles.css
libs/by-framework-dashboard/tests/: test_dashboard_server.py
libs/by-framework-history-byclaw/: pyproject.toml
libs/by-framework-history-byclaw/src/by_framework_history_byclaw/: byclaw_history.py
libs/by-framework-history-byclaw/tests/: test_byclaw_history.py
libs/by-framework-history-postgres/: pyproject.toml
libs/by-framework-langgraph/: pyproject.toml
libs/by-framework-langgraph/src/by_framework_langgraph/: _utils.py  adapter.py  tools.py
libs/by-framework-langgraph/tests/: test_adapter.py  test_tools.py
libs/by-framework-trace-langfuse/: pyproject.toml
libs/by-framework-trace-langfuse/src/by_framework_trace_langfuse/: __init__.py  langfuse.py
libs/by-framework-trace-phoenix/: pyproject.toml
libs/by-framework-trace-phoenix/tests/: test_phoenix_plugin.py
libs/by-framework-trace-query/: pyproject.toml
libs/by-framework-trace-query/src/by_framework_trace_query/: __init__.py  client.py  merger.py  models.py  redis_source.py
libs/by-framework-trace-query/tests/: test_trace_query_sdk.py
scripts/: python_quality.sh
src/by_framework/: __init__.py
src/by_framework/admin/: worker_manager.py
src/by_framework/client/: __init__.py  byai_client.py  client.py
src/by_framework/common/: __init__.py  config.py  constants.py  logger.py  metrics.py
src/by_framework/core/: __init__.py  availability.py  delivery_gate.py  registry.py  wakeup_controller.py
src/by_framework/core/extensions/: __init__.py  agent_config_audit.py  plugin.py  registry.py
src/by_framework/core/protocol/: __init__.py  byai_codec.py
src/by_framework/core/runtime/: __init__.py  file_manager.py
src/by_framework/core/runtime/filestore/: local.py
src/by_framework/metrics/: __init__.py  catalog.py  collector.py  read_client.py  snapshot.py
src/by_framework/observability/: __init__.py  dashboard.py  metrics.py  snapshot.py  span_recorder.py
src/by_framework/observability/frontend/: package.json  vite.config.js
src/by_framework/observability/frontend/src/: styles.css
src/by_framework/observability/static/: app.js  index.html  styles.css
src/by_framework/trace/: __init__.py  external_trace.py  span_recorder.py  trace_schema.py  trace_writer.py
src/by_framework/util/: discovery_http_client.py  http_client.py
src/by_framework/worker/: _control_handling.py  _response_buffer.py  byai_context.py  context.py  heartbeat.py  processor.py  runner.py  worker.py
tests/client/: test_client.py
tests/common/: test_config.py  test_logger.py
tests/core/: test_agent_config_audit.py  test_availability.py  test_registry.py  test_worker_manager.py
tests/core/protocol/: test_byai_codec.py  test_protocol.py
tests/core/runtime/: test_file_access_context.py  test_file_paths.py  test_file_permissions.py
tests/core/runtime/history/: test_history_persistence.py
tests/integration/: test_logger_integration.py
tests/metrics/: test_catalog.py  test_collector.py  test_metrics.py  test_read_client.py  test_snapshot.py
tests/observability/: test_dashboard_server.py  test_external_trace.py  test_metrics.py  test_otel_exporter.py  test_snapshot.py  test_span_recorder.py  test_trace_query_sdk.py
tests/plugin/: test_langfuse_plugin.py
tests/trace/: test_logger_correlation.py  test_otel_exporter.py  test_span_recorder.py
tests/util/: test_discovery_http_client_upload.py  test_http_client.py
tests/worker/: test_context.py  test_gateway_worker.py  test_heartbeat.py  test_runner.py
