[project]
name = "by-framework-dashboard"
version = "0.1.0"
description = "Dashboard UI and HTTP server for by-framework observability"
requires-python = ">=3.12"
dependencies = [
    "by-framework>=0.2.1",
    "by-framework-trace-query>=0.1.0",
]

[project.scripts]
by-framework-dashboard = "by_framework_dashboard.dashboard:main"

[tool.uv.sources]
by-framework = { workspace = true }
by-framework-trace-query = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/by_framework_dashboard"]

[tool.pytest.ini_options]
pythonpath = ["src", "../../src", "../by-framework-trace-query/src"]
testpaths = ["tests"]
