[project]
name = "by-framework-history-byclaw"
version = "0.0.4.dev0"
description = "ByClaw remote history backend for by-framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "by-framework>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "isort>=5.13.0",
    "pyink>=24.0.0",
    "pylint>=3.0.0",
    "ruff>=0.3.0",
]

[tool.uv.sources]
by-framework = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/by_framework_history_byclaw"]

[tool.pytest.ini_options]
pythonpath = ["src", "../../src"]
testpaths = ["tests"]
