[project]
name = "by-framework-langgraph"
version = "0.0.3.dev3"
description = "LangGraph integration for by-framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "by-framework>=0.2.1",
    "langgraph>=1.1.6",
    "langchain-core>=1.2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "isort>=5.13.0",
    "pyink>=24.0.0",
    "pylint>=3.0.0",
    "ruff>=0.3.0",
]
langfuse = [
    "by-framework-trace-langfuse>=0.0.2",
]
phoenix = [
    "by-framework-trace-phoenix>=0.0.2",
    "openinference-instrumentation-langchain>=0.1.0",
    "openinference-instrumentation-openai>=0.1.0",
]

[tool.uv.sources]
by-framework = { workspace = true }
by-framework-trace-langfuse = { workspace = true }
by-framework-trace-phoenix = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/by_framework_langgraph"]

[tool.pytest.ini_options]
pythonpath = ["src", "../../src"]
testpaths = ["tests"]
