[project]
name = "by-framework-trace-phoenix"
version = "0.0.3.dev1"
description = "Arize Phoenix trace provider for by-framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "by-framework>=0.2.1",
    "arize-phoenix-otel>=0.3.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "isort>=5.13.0",
    "pyink>=24.0.0",
    "pylint>=3.0.0",
    "ruff>=0.3.0",
]

[tool.uv.sources]
by-framework = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/by_framework_trace_phoenix"]

[tool.pytest.ini_options]
pythonpath = ["src", "../../src"]
testpaths = ["tests"]
