[project]
name = "by-framework-trace-query"
version = "0.1.0"
description = "Trace read SDK for by-framework observability"
requires-python = ">=3.12"
dependencies = [
    "by-framework>=0.2.1",
]

[tool.uv.sources]
by-framework = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/by_framework_trace_query"]
