[project]
name = "by-framework-trace-query"
version = "0.1.0"
description = "Trace read SDK for by-framework observability"
requires-python = ">=3.12"
dependencies = [
    "by-framework>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "isort>=5.13.0",
    "pyink>=24.0.0",
    "pylint>=3.0.0",
    "ruff>=0.3.0",
]

[tool.uv.sources]
by-framework = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/by_framework_trace_query"]
